--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "archo-react",
+  "name": "neelachala-react",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,20 +19,21 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "dotenv-cli": "^7.2.1",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-circular-progressbar": "^2.0.4",
-    "react-dom": "17.0.2",
-    "react-modal-video": "^1.2.8",
-    "react-scroll": "^1.8.4",
-    "react-slick": "^0.28.1",
-    "sass": "^1.45.0",
+    "next": "13.4.6",
+    "react": "18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "18.2.0",
+    "react-modal-video": "^2.0.0",
+    "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
+    "react-type-animation": "^3.1.0",
+    "sass": "^1.63.4",
     "slick-carousel": "^1.8.1",
-    "swiper": "^7.3.2"
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.6",
     "prisma": "^4.15.0"
   }
 }
