--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:seed": "npx dotenv -e .env.local -- prisma db seed",
     "prisma:generate": "npx dotenv -e .env.local -- prisma generate",
     "prisma:studio": "npx dotenv -e .env.local -- prisma studio",
+    "prisma:format": "npx dotenv -e .env.local -- prisma format",
     "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
