--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-type-animation": "^3.1.0",
+    "reactjs-popup": "^2.0.5",
     "sass": "^1.63.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.4.1"
