--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-markdown": "^8.0.7",
+    "react-modal-image": "^2.6.0",
     "react-modal-video": "^2.0.0",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
