--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "babel": {
+    "presets": [
+      "next/babel"
+    ]
+  },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "@supabase/supabase-js": "^2.26.0",
     "next": "13.4.6",
     "node-fetch": "^3.3.2",
